# Electrical-grid-TDA-urkaine

./: .gitignore  README.md  TODO.md  graph_editor.py  history.md  project objective.txt  pyproject.toml  requirements.txt  unsolved issues.txt
analysis/: __init__.py  ai_analysis.py
core/: __init__.py  edge.py  node.py
docs/: distance_metrics.md
electrical_distance/: __init__.py  metrics.py  ptdf_calculator.py
graph_editor/: __init__.py
graph_editor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
integration/: __init__.py  grid_to_graph.py  power_grid_tda.py
power_grid/: __init__.py  ac_power_flow.py  contingency.py  importer.py  ukraine_loader.py
scripts/: compare_metrics.py
tda/: __init__.py  vr_core.py  vulnerability.py
tests/: __init__.py  test_contingency.py  test_grid_to_graph.py  test_metrics.py  test_ptdf_calculator.py  test_ukraine_loader.py  test_vr_core.py  test_vulnerability_legacy.py
ui/: __init__.py  persistence_diagram.py  tda_explorer.py  vulnerability_window.py
utils/: __init__.py  logger.py
