[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_editor"
version = "0.1.0"
description = "Topological Data Analysis & Power Grid Toolkit"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
include = ["graph_editor*"]

